--- a/ATMS-597-SP-2020-Project-2/Project2.ipynb
+++ b/ATMS-597-SP-2020-Project-2/Project2.ipynb
@@ -84,7 +84,7 @@
         "# getting station information (not sure if this is necessary)\n",
         "!wget https://www1.ncdc.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
       "source": [
         "!head -20 ghcnd-stations.txt"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "stations = pd.read_fwf('ghcnd-stations.txt',names=['ID','LAT [deg]','LON [deg]','ELV [m]','NAME','col5','col6','col7']) # I don't know what the last three columns are...\n",
         "stations"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,16 +650,16 @@
       "metadata": {
         "id": "T9vpivDzvvXg",
         "colab_type": "code",
+        "outputId": "385bdd4b-7429-4bd4-a782-506819ba1f4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 220
-        },
-        "outputId": "385bdd4b-7429-4bd4-a782-506819ba1f4c"
+        }
       },
       "source": [
         "stations['ID'] == 'US360019'"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,16 +691,16 @@
       "metadata": {
         "id": "AUv3i6Qjcm8I",
         "colab_type": "code",
+        "outputId": "f6d489c4-4a5f-4d28-9412-6f29d0995e6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 48
-        },
-        "outputId": "a263c71b-ba64-42c9-8354-60ffc182dbf1"
+        }
       },
       "source": [
-        "stations[:][stations['ID'] == 'US360019']"
+        "stations[:][stations['ID'] == 'US000360019']"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +748,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -756,6 +756,260 @@
       "cell_type": "code",
       "metadata": {
         "id": "8tqgLlqSct2E",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3dd9b4d5-5f71-4c90-dc82-fdde58544550"
+      },
+      "source": [
+        "make_request(\"stations\")"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Response [200]>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rfgL5jlKiNMr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e3c9f28b-d107-451e-eb30-58fc64f91607"
+      },
+      "source": [
+        "import datetime\n",
+        "\n",
+        "from IPython import display # for updating the cell dynamically\n",
+        "\n",
+        "current = datetime.date(2018, 1, 1)\n",
+        "end = datetime.date(2019, 1, 1)\n",
+        "\n",
+        "results = []\n",
+        "\n",
+        "while current < end:\n",
+        "    # update the cell with status information\n",
+        "    display.clear_output(wait=True)\n",
+        "    display.display(f'Gathering data for {str(current)}')\n",
+        "    \n",
+        "    response = make_request(\n",
+        "        'data', \n",
+        "        {\n",
+        "            'datasetid' : 'GHCND', # Global Historical Climatology Network - Daily (GHCND) dataset\n",
+        "            'locationid' : 'CITY:US360019', # NYC\n",
+        "            'startdate' : current,\n",
+        "            'enddate' : current,\n",
+        "            'units' : 'metric',\n",
+        "            'limit' : 1000 # max allowed\n",
+        "        }\n",
+        "    )\n",
+        "\n",
+        "    if response.ok:\n",
+        "        # we extend the list instead of appending to avoid getting a nested list\n",
+        "        results.extend(response.json()['results'])\n",
+        "\n",
+        "    # update the current date to avoid an infinite loop\n",
+        "    current += datetime.timedelta(days=1)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "'Gathering data for 2018-12-31'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZaF2uzrblwHI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 417
+        },
+        "outputId": "ed10316c-94e2-4829-8f4b-a02c66c026a9"
+      },
+      "source": [
+        "df = pd.DataFrame(results)\n",
+        "df"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>datatype</th>\n",
+              "      <th>station</th>\n",
+              "      <th>attributes</th>\n",
+              "      <th>value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2018-01-01T00:00:00</td>\n",
+              "      <td>PRCP</td>\n",
+              "      <td>GHCND:US1CTFR0039</td>\n",
+              "      <td>,,N,</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2018-01-01T00:00:00</td>\n",
+              "      <td>PRCP</td>\n",
+              "      <td>GHCND:US1NJBG0015</td>\n",
+              "      <td>,,N,</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2018-01-01T00:00:00</td>\n",
+              "      <td>SNOW</td>\n",
+              "      <td>GHCND:US1NJBG0015</td>\n",
+              "      <td>,,N,</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2018-01-01T00:00:00</td>\n",
+              "      <td>PRCP</td>\n",
+              "      <td>GHCND:US1NJBG0017</td>\n",
+              "      <td>,,N,</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2018-01-01T00:00:00</td>\n",
+              "      <td>SNOW</td>\n",
+              "      <td>GHCND:US1NJBG0017</td>\n",
+              "      <td>,,N,</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>79866</th>\n",
+              "      <td>2018-12-31T00:00:00</td>\n",
+              "      <td>WDF5</td>\n",
+              "      <td>GHCND:USW00094789</td>\n",
+              "      <td>,,W,</td>\n",
+              "      <td>130.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>79867</th>\n",
+              "      <td>2018-12-31T00:00:00</td>\n",
+              "      <td>WSF2</td>\n",
+              "      <td>GHCND:USW00094789</td>\n",
+              "      <td>,,W,</td>\n",
+              "      <td>9.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>79868</th>\n",
+              "      <td>2018-12-31T00:00:00</td>\n",
+              "      <td>WSF5</td>\n",
+              "      <td>GHCND:USW00094789</td>\n",
+              "      <td>,,W,</td>\n",
+              "      <td>12.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>79869</th>\n",
+              "      <td>2018-12-31T00:00:00</td>\n",
+              "      <td>WT01</td>\n",
+              "      <td>GHCND:USW00094789</td>\n",
+              "      <td>,,W,</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>79870</th>\n",
+              "      <td>2018-12-31T00:00:00</td>\n",
+              "      <td>WT02</td>\n",
+              "      <td>GHCND:USW00094789</td>\n",
+              "      <td>,,W,</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>79871 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                      date datatype            station attributes  value\n",
+              "0      2018-01-01T00:00:00     PRCP  GHCND:US1CTFR0039       ,,N,    0.0\n",
+              "1      2018-01-01T00:00:00     PRCP  GHCND:US1NJBG0015       ,,N,    0.0\n",
+              "2      2018-01-01T00:00:00     SNOW  GHCND:US1NJBG0015       ,,N,    0.0\n",
+              "3      2018-01-01T00:00:00     PRCP  GHCND:US1NJBG0017       ,,N,    0.0\n",
+              "4      2018-01-01T00:00:00     SNOW  GHCND:US1NJBG0017       ,,N,    0.0\n",
+              "...                    ...      ...                ...        ...    ...\n",
+              "79866  2018-12-31T00:00:00     WDF5  GHCND:USW00094789       ,,W,  130.0\n",
+              "79867  2018-12-31T00:00:00     WSF2  GHCND:USW00094789       ,,W,    9.8\n",
+              "79868  2018-12-31T00:00:00     WSF5  GHCND:USW00094789       ,,W,   12.5\n",
+              "79869  2018-12-31T00:00:00     WT01  GHCND:USW00094789       ,,W,    1.0\n",
+              "79870  2018-12-31T00:00:00     WT02  GHCND:USW00094789       ,,W,    1.0\n",
+              "\n",
+              "[79871 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T6HpzLfvnh4F",
         "colab_type": "code",
         "colab": {}
       },
