--- a/ATMS-597-SP-2020-Project-2/Project2.ipynb
+++ b/ATMS-597-SP-2020-Project-2/Project2.ipynb
@@ -700,7 +700,7 @@
       "source": [
         "stations[:][stations['ID'] == 'US000360019']"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,16 +757,16 @@
       "metadata": {
         "id": "8tqgLlqSct2E",
         "colab_type": "code",
+        "outputId": "3dd9b4d5-5f71-4c90-dc82-fdde58544550",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3dd9b4d5-5f71-4c90-dc82-fdde58544550"
+        }
       },
       "source": [
         "make_request(\"stations\")"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,11 +787,11 @@
       "metadata": {
         "id": "rfgL5jlKiNMr",
         "colab_type": "code",
+        "outputId": "e3c9f28b-d107-451e-eb30-58fc64f91607",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e3c9f28b-d107-451e-eb30-58fc64f91607"
+        }
       },
       "source": [
         "import datetime\n",
@@ -827,7 +827,7 @@
         "    # update the current date to avoid an infinite loop\n",
         "    current += datetime.timedelta(days=1)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -847,17 +847,17 @@
       "metadata": {
         "id": "ZaF2uzrblwHI",
         "colab_type": "code",
+        "outputId": "ed10316c-94e2-4829-8f4b-a02c66c026a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 417
-        },
-        "outputId": "ed10316c-94e2-4829-8f4b-a02c66c026a9"
+        }
       },
       "source": [
         "df = pd.DataFrame(results)\n",
         "df"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1014,74 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Plotting\n",
+        "# copied from https://matplotlib.org/matplotblog/posts/warming-stripes/\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.patches import Rectangle\n",
+        "from matplotlib.collections import PatchCollection\n",
+        "from matplotlib.colors import ListedColormap\n",
+        "import pandas as pd\n",
+        "\n",
+        "# time period\n",
+        "FIRST = 1850\n",
+        "LAST = 2018  # inclusive\n",
+        "\n",
+        "# Reference period for the center of the color scale\n",
+        "FIRST_REFERENCE = 1971\n",
+        "LAST_REFERENCE = 2000\n",
+        "LIM = 0.7 # degrees\n",
+        "\n",
+        "####### NEED TO MODIFY ######\n",
+        "# data from\n",
+        "# https://www.metoffice.gov.uk/hadobs/hadcrut4/data/current/time_series/HadCRUT.4.6.0.0.annual_ns_avg.txt\n",
+        "df = pd.read_fwf(\n",
+        "    'HadCRUT.4.6.0.0.annual_ns_avg.txt',\n",
+        "    index_col=0,\n",
+        "    usecols=(0, 1),\n",
+        "    names=['year', 'anomaly'],\n",
+        "    header=None,\n",
+        ")\n",
+        "####### NEED TO MODIFY ######\n",
+        "\n",
+        "anomaly = df.loc[FIRST:LAST, 'anomaly'].dropna()\n",
+        "reference = anomaly.loc[FIRST_REFERENCE:LAST_REFERENCE].mean()\n",
+        "\n",
+        "# the colors in this colormap come from http://colorbrewer2.org\n",
+        "# the 8 more saturated colors from the 9 blues / 9 reds\n",
+        "cmap = ListedColormap([\n",
+        "    '#08306b', '#08519c', '#2171b5', '#4292c6',\n",
+        "    '#6baed6', '#9ecae1', '#c6dbef', '#deebf7',\n",
+        "    '#fee0d2', '#fcbba1', '#fc9272', '#fb6a4a',\n",
+        "    '#ef3b2c', '#cb181d', '#a50f15', '#67000d',\n",
+        "])\n",
+        "\n",
+        "fig = plt.figure(figsize=(10, 1))\n",
+        "\n",
+        "####### NEED TO MODIFY ######\n",
+        "ax = fig.add_axes([0, 0, 1, 1])\n",
+        "ax.set_axis_off() # if choose to overlay data on top of the strips, we need the axes.\n",
+        "####### NEED TO MODIFY ######\n",
+        "\n",
+        "###### NEED TO ADD ######\n",
+        "# line plot of data points \n",
+        "###### NEED TO ADD ######\n",
+        "\n",
+        "col = PatchCollection([\n",
+        "    Rectangle((y, 0), 1, 1)\n",
+        "    for y in range(FIRST, LAST + 1)\n",
+        "])\n",
+        "\n",
+        "# set data, colormap and color limits\n",
+        "col.set_array(anomaly)\n",
+        "col.set_cmap(cmap)\n",
+        "col.set_clim(reference - LIM, reference + LIM)\n",
+        "ax.add_collection(col)\n",
+        "\n",
+        "ax.set_ylim(0, 1)\n",
+        "ax.set_xlim(FIRST, LAST + 1)\n",
+        "\n",
+        "fig.savefig('warming-stripes.png')"
       ],
       "execution_count": 0,
       "outputs": []
