--- a/ATMS-597-SP-2020-Project-2/Project2.ipynb
+++ b/ATMS-597-SP-2020-Project-2/Project2.ipynb
@@ -1042,7 +1042,7 @@
         "    names=['year', 'anomaly'],\n",
         "    header=None,\n",
         ")\n",
-        "####### NEED TO MODIFY ######\n",
+        "#############################\n",
         "\n",
         "anomaly = df.loc[FIRST:LAST, 'anomaly'].dropna()\n",
         "reference = anomaly.loc[FIRST_REFERENCE:LAST_REFERENCE].mean()\n",
@@ -1060,12 +1060,12 @@
         "\n",
         "####### NEED TO MODIFY ######\n",
         "ax = fig.add_axes([0, 0, 1, 1])\n",
-        "ax.set_axis_off() # if choose to overlay data on top of the strips, we need the axes.\n",
-        "####### NEED TO MODIFY ######\n",
+        "ax.set_axis_off() # if user chooses to overlay data on top of the strips, we need the axes.\n",
+        "#############################\n",
         "\n",
         "###### NEED TO ADD ######\n",
         "# line plot of data points \n",
-        "###### NEED TO ADD ######\n",
+        "#########################\n",
         "\n",
         "col = PatchCollection([\n",
         "    Rectangle((y, 0), 1, 1)\n",
