--- a/ATMS-597-SP-2020-Project-2/Project2.ipynb
+++ b/ATMS-597-SP-2020-Project-2/Project2.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -95,7 +95,8 @@
     "    '''\n",
     "    S. Nesbitt\n",
     "    '''\n",
-    "    datain[key][(np.abs(datain[key])==9999)] = None\n",
+    "    datain[key][(np.abs(datain[key])==9999)] = np.nan\n",
+    "    datain.dropna(inplace=True)\n",
     "    datain[key] = datain[key].astype(\"float\") / 10.\n",
     "    datain[\"date\"] = pd.to_datetime(df[\"date\"], infer_datetime_format=True)\n",
     "    datain.index = datain[\"date\"]\n",
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -856,308 +857,14 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>W_num</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-5.239286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-2.830000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.957143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.007143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.628571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-0.021429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7.864286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>5.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.614286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>-3.383333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2.107143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>6.071429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>8.335714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>12.535714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>13.971429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>13.692857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>14.207143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>10.078571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>17.814286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>15.035714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>16.457143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>15.742857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>22.457143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>23.221429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>21.178571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>23.642857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>23.207143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>25.764286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>21.700000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>22.871429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>20.357143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>22.307143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>21.914286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>17.664286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>17.328571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>18.378571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>22.450000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>21.950000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>15.678571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>18.607143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>13.564286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>14.007143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>10.635714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>6.228571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>2.578571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>4.057143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>4.092857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>3.300000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>-2.421429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>1.978571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>-4.292857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>-8.600000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           value\n",
-       "W_num           \n",
-       "0      -5.239286\n",
-       "1      -2.830000\n",
-       "2       0.957143\n",
-       "3       5.007143\n",
-       "4      -0.628571\n",
-       "5      -0.021429\n",
-       "6       0.400000\n",
-       "7       7.864286\n",
-       "8       5.400000\n",
-       "9       1.614286\n",
-       "10     -3.383333\n",
-       "11      2.107143\n",
-       "12      6.071429\n",
-       "13      8.335714\n",
-       "14     12.535714\n",
-       "15     13.971429\n",
-       "16     13.692857\n",
-       "17     14.207143\n",
-       "18     10.078571\n",
-       "19     17.814286\n",
-       "20     15.035714\n",
-       "21     16.457143\n",
-       "22     15.742857\n",
-       "23     22.457143\n",
-       "24     23.221429\n",
-       "25     21.178571\n",
-       "26     23.642857\n",
-       "27     23.207143\n",
-       "28     25.764286\n",
-       "29     21.700000\n",
-       "30     22.871429\n",
-       "31     20.357143\n",
-       "32     22.307143\n",
-       "33     21.914286\n",
-       "34     17.664286\n",
-       "35     17.328571\n",
-       "36     18.378571\n",
-       "37     22.450000\n",
-       "38     21.950000\n",
-       "39     15.678571\n",
-       "40     18.607143\n",
-       "41     13.564286\n",
-       "42     14.007143\n",
-       "43     10.635714\n",
-       "44      6.228571\n",
-       "45      2.578571\n",
-       "46      4.057143\n",
-       "47      4.092857\n",
-       "48      3.300000\n",
-       "49     -2.421429\n",
-       "50      1.978571\n",
-       "51     -4.292857\n",
-       "52     -8.600000"
+       "Int64Index([2017, 2017, 2017, 2017, 2017, 2017, 2017, 2017, 2017, 2017,\n",
+       "            ...\n",
+       "            2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018],\n",
+       "           dtype='int64', name='date', length=748)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,28 +874,37 @@
     "display(df_mean, df_mean.describe())\n",
     "# freq=\"W\" starts with Sunday\n",
     "df[\"W_num\"] = (df[\"date\"].dt.dayofyear - 1) // 7\n",
-    "df.groupby(\"W_num\").mean()"
+    "df.groupby(\"W_num\").mean()\n",
+    "#df.drop(df[\"date\"].dt.dayofyear > 364, inplace=True)\n",
+    "df.tail(20)\n",
+    "df.index.year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-5-1137edb23fd0>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-1137edb23fd0>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def is_leap_and_29Feb_and_last_day(s):\n",
+    "    return ((s.index.year % 4 == 0) & ((s.index.year % 100 != 0) | (s.index.year % 400 == 0)) & (s.index.month == 2) & (s.index.day == 29)) | ((s.index.month == 12) & (s.index.day == 31))\n",
+    "\n",
     "def cal_anomaly(df, freq=\"W\"):\n",
-    "    df_mean = df.resample(7).mean()\n",
-    "    if freq == \"W\":\n",
+    "    mask = is_leap_and_29Feb_and_last_day(df)\n",
+    "    df_W = df[~mask]\n",
+    "    \n",
+    "    df_W = df_W.resample(\"W\").mean()\n",
     "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "        "
    ]
   },
