Fixed the reference period temperature average dataframe.

--- a/ATMS-597-SP-2020-Project-2/Copy_of_Project2.ipynb
+++ b/ATMS-597-SP-2020-Project-2/Copy_of_Project2.ipynb
@@ -43,9 +43,10 @@
         "colab_type": "code",
         "id": "yfYABhOQpHPW",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 34
         },
-        "outputId": "85e7751b-53fd-49be-dd03-0d3f65cb0819"
+        "outputId": "99a64795-d966-4062-81a0-03f7e392f8f4"
       },
       "source": [
         "\"\"\"Weekly Averaged Temperature for NYC\"\"\"\n",
@@ -118,12 +119,15 @@
         "        if response.ok:\n",
         "            # We extend the list instead of appending to avoid getting a nested list\n",
         "            results.extend(response.json()['results'])\n",
+        "        else: \n",
+        "            print('The date range has missing data. Please select a new date range.')\n",
+        "            break\n",
         "    \n",
         "    return results    \n",
         "\n",
         "# Set date range\n",
-        "daterange = np.arange(1971, 2001)\n",
-        "results_avg = []\n",
+        "daterange = np.arange(1971, 1999)\n",
+        "results = []\n",
         "for i in range(len(daterange)):\n",
         "    # Update the cell with status information\n",
         "    display.clear_output(wait=True)\n",
@@ -144,9 +148,9 @@
         "\n",
         "    if response.ok:\n",
         "        # We extend the list instead of appending to avoid getting a nested list\n",
-        "        results_avg.extend(response.json()['results'])\n",
+        "        results.extend(response.json()['results'])\n",
         "\n",
-        "df_avg = results_avg\n",
+        "df_avg = pd.DataFrame(results)\n",
         "\n",
         "def clean_up(datain,key):\n",
         "    '''\n",
@@ -157,13 +161,13 @@
         "    datain[key]= datain[key].astype('float')\n",
         "    return datain"
       ],
-      "execution_count": 0,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "'Gathering data for 1999'"
+              "'Gathering data for 1998'"
             ]
           },
           "metadata": {
@@ -177,7 +181,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "qNK63xC1pQ32",
-        "colab": {}
+        "outputId": "3f681d08-f09c-4636-a78f-eafb7447f73b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        }
       },
       "source": [
         "# Create a dataframe to store the results\n",
@@ -188,11 +196,32 @@
         "# GHCND documentation: https://www1.ncdc.noaa.gov/pub/data/cdo/documentation/GHCND_documentation.pdf)\n",
         "df = clean_up(df, 'value')\n",
         "df['date'] = pd.to_datetime(df['date'], infer_datetime_format=True)\n",
-        "df.index = df['date']\n",
-        "df"
+        "df.index = df['date']"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "'Gathering data for 1998'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:100: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
